2010-11-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add a didFail WKContextDownloadClient callback
        https://bugs.webkit.org/show_bug.cgi?id=49847

        * UIProcess/API/C/WKContext.h:
        Add didFail callback.

        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::didFail):
        Call WebDownloadClient::didFail.

        * UIProcess/WebDownloadClient.cpp:
        (WebKit::WebDownloadClient::didFail):
        Call the didFail client function.


2010-11-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Extend sandbox when downloading files
        https://bugs.webkit.org/show_bug.cgi?id=49844

        * Platform/CoreIPC/HandleMessage.h:
        (CoreIPC::callMemberFunction):
        Add new overload.

        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::decideDestinationWithSuggestedFilename):
        Create a sandbox extension handle if necessary.

        * UIProcess/Downloads/DownloadProxy.messages.in:
        Add a sandbox extension handle out parameter to the DecideDestinationWithSuggestedFilename message.

        * WebProcess/Downloads/Download.cpp:
        (WebKit::Download::decideDestinationWithSuggestedFilename):
        Create and consume the returned sandbox extension handle.

        (WebKit::Download::didFinish):
        (WebKit::Download::didFail):
        Invalidate the sandbox extension handles.

        * WebProcess/Downloads/mac/DownloadMac.mm:
        (-[WKDownloadAsDelegate download:shouldDecodeSourceDataOfMIMEType:]):
        Whoops, fix inverted logic.

2010-11-19  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.

        Add Debug_Cairo_CFLite and Release_Cairo_CFLite configurations for all vcproj files
        https://bugs.webkit.org/show_bug.cgi?id=49819

        * win/WebKit2.vcproj:
        * win/WebKit2Generated.vcproj:
        * win/WebKit2WebProcess.vcproj: